<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/viewId"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear1"
        android:orientation="vertical"
        android:fadingEdge="vertical"
        android:padding="@dimen/LinearLayout_padding_Id_linear1">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_Title"
            android:layout_gravity="fill_horizontal"
            android:gravity="fill_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:padding="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="30dp" />

        <TextView
            android:id="@+id/textView2SectionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_SectionName"
            android:textSize="16.9sp"
            android:padding="1dp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="fill_horizontal"
            android:gravity="fill"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="78dp" />

        <TextView
            android:id="@+id/textView3WebPublication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_web_Publication_Date"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="13.9sp"
            android:padding="1dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2SectionName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="127dp" />

        <TextView
            android:id="@+id/textView4WebUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_web_Url"
            android:layout_gravity="fill_horizontal"
            android:gravity="fill"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textStyle="italic"
            android:padding="1dp"
            app:layout_constraintTop_toBottomOf="@id/textView3WebPublication"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="166dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear2"
                android:orientation="horizontal"
                android:padding="@dimen/LinearLayout_padding_Id_linear2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/btn_star"
                        android:id="@+id/imgAuthor"
                        android:padding="2dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerInside"
                        android:requiresFadingEdge="none"
                        android:fadingEdge="horizontal"
                        android:scaleX=".8"
                        android:scaleY=".8"
                        android:contentDescription="@string/imageView"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/textView5Author"
                        app:layout_constraintTop_toBottomOf="@+id/linear1"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:id="@+id/textView5Author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_Author_Name"
                        android:textColorHighlight="@color/colorAccent"
                        android:layout_gravity="fill_horizontal"
                        android:gravity="fill"
                        android:textSize="15sp"
                        android:padding="4dp"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintTop_toBottomOf="@+id/linear1"
                        app:layout_constraintLeft_toRightOf="@+id/imgAuthor"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:layout_editor_absoluteX="37dp"
                        tools:layout_editor_absoluteY="194dp" />
            </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>